# pgsafe

./: CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  action.yml  config-example.toml
.github/fixtures/clean/: 0001_clean.sql
.github/fixtures/hazard/: 0002_hazard.sql
.github/workflows/: action-selftest.yml  ci.yml  release.yml  rule-proofs.yml  site.yml
benches/: lint.rs
scripts/: prove-rules.sh
site/: .gitignore  astro.config.mjs  package-lock.json  package.json  playwright.config.ts
site/public/: CNAME  robots.txt
site/src/components/: Footer.astro  Nav.astro  SeverityBadge.astro
site/src/data/: rules.catalog.json  rules.ts
site/src/layouts/: Base.astro  DocsLayout.astro
site/src/lib/: md.ts
site/src/pages/: index.astro  playground.astro
site/src/pages/docs/: ci.md  config.md  getting-started.md  index.astro  output.md  usage.md
site/src/pages/rules/: [id].astro  index.astro
site/src/playground/: examples.ts  main.ts  permalink.ts  pgsafe-wasm.ts
site/src/styles/: theme.css
site/tests/: examples-format.spec.ts  playground.spec.ts  rules.spec.ts  smoke.spec.ts
src/: ast.rs  cli.rs  config.rs  do_block.rs  fix.rs  fk_index.rs  forbid_nullable_fk.rs  forbidden_types.rs  gitdiff.rs  identifier.rs  lib.rs  main.rs  naming.rs  newtable.rs  output.rs  plpgsql.rs  require_columns.rs  require_comment.rs  require_if_exists.rs  require_not_null.rs  require_pk.rs  sarif.rs  suppression.rs  timeout.rs  txn.rs
src/cli/: config.rs  fix.rs  gitdiff.rs  mod.rs
src/lsp/: actions.rs  diagnostics.rs  fixall.rs  hover.rs  mod.rs  position.rs  server.rs
src/rules/: add_check_without_not_valid.rs  add_column_generated_stored.rs  add_column_identity.rs  add_column_not_null_no_default.rs  add_column_serial.rs  add_column_volatile_default.rs  add_domain_constraint_without_not_valid.rs  add_domain_not_null.rs  add_exclusion_constraint.rs  add_fk_without_not_valid.rs  add_index_non_concurrent.rs  add_primary_key_without_index.rs  add_trigger.rs  add_unique_constraint.rs  alter_column_type.rs  attach_partition.rs  detach_partition_non_concurrent.rs  drop_column.rs  drop_constraint.rs  drop_database.rs  drop_index_non_concurrent.rs  drop_not_null.rs  drop_table.rs  mod.rs  non_concurrent_index.rs  prefer_bigint_primary_key.rs  prefer_identity.rs  prefer_jsonb.rs  refresh_matview_non_concurrent.rs  reindex_non_concurrent.rs  rename.rs  set_access_method.rs  set_logged_unlogged.rs  set_not_null.rs  truncate.rs  vacuum_full_cluster.rs
src/synthesized/: do_block.rs  enum_value.rs  fk_index.rs  forbid_nullable_fk.rs  forbidden_types.rs  identifier.rs  mod.rs  naming.rs  newtable.rs  plpgsql.rs  require_columns.rs  require_comment.rs  require_if_exists.rs  require_not_null.rs  require_pk.rs  require_schema_qualified.rs  timeout.rs  txn.rs
tests/: catalog_in_sync.rs  cli.rs  config.rs  fix_cli.rs  fixes.rs  gitdiff.rs  list_rules.rs  lsp_server.rs  new_table.rs  resolve.rs  rule_cases.rs  rule_proofs.rs  sarif.rs  since.rs  suppression.rs  timeout.rs  txn.rs
wasm/: Cargo.toml  README.md  build-web.sh  run-node.mjs  spike.sh
wasm/.cargo/: config.toml
wasm/src/: lib.rs  main.rs
wasm/wasi-shims/: grp.h  missing_errno.h  netdb.h  prelude.h  pwd.h  syslog.h
wasm/wasi-shims/sys/: wait.h
