[package]
name = "pgsafe"
version = "0.0.1"
edition = "2021"
description = "Static safety linter for PostgreSQL DDL migrations — catches unsafe schema changes before they lock or break production."
license = "Apache-2.0"
readme = "README.md"
keywords = ["postgres", "postgresql", "migrations", "ddl", "linter"]
categories = ["development-tools", "database"]
repository = "https://github.com/fixed-width/pgsafe"

[dependencies]
pg_query = "6.1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
clap = { version = "4", features = ["derive"] }
thiserror = "2"

[dev-dependencies]
assert_cmd = "2.2"
predicates = "3.1"
tempfile = "3"
criterion = "0.8.2"

[[bench]]
name = "lint"
harness = false
